# AnniesLasso

./: .gitignore  LICENSE  README.md  getting_started.py  prospect_model_cov.npy  pyproject.toml  setup.py
.github/workflows/: CI.yml  test_model_output.yml  test_unittests.yml
docs/: Makefile  conf.py
docs/source/: api.rst  guide.rst  index.rst  install.rst  tutorials.rst
thecannon/: __init__.py  __main__.py  censoring.py  continuum.py  fitting.py  model.py  plot.py  restricted.py  utils.py
thecannon/tests/: test_censoring.py  test_continuum.py  test_fitting.py  test_model.py  test_utils.py  test_vectorizer.py
thecannon/tests/actions/: compare_generated_prospect_models.py  compare_generated_prospect_restricted_models.py  run_cannon_andy_svens_python.py  run_cannon_generate_test_model.py
thecannon/tests/data/: prospect_model_cov_restricted_ref.npy  prospect_model_labels_ref.npy  prospect_model_labels_restricted_ref.npy  prospect_model_ref.model  prospect_model_restricted_ref.model
thecannon/vectorizer/: base.py  polynomial.py
